# KOB-ERP

./: .env.example  .gitignore  Dockerfile.prod  README.md  TODO_LATER.md  alembic.ini  docker-compose.odoo.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json
backend/: __init__.py  config.py  main.py  seed.py
docs/: ARCHITECTURE.md  ODOO_20_BACKPORT_PLAN.md  ODOO_20_PREVIEW.md  ODOO_MAPPING.md  ROADMAP.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
infra/: docker-compose.prod.yml  nginx.conf
kob_odoo_addons/: README.md
mcp_server/: __init__.py  deepseek_agent.py  obsidian_deepseek.py  power_tools.py  server.py  subagent.py
migrations/: env.py
reports/: download_KK2_ROI.html  เปรียบเทียบตู้น้ำดื่ม_KK2_ROI.xlsx
scripts/: UAT_FINDINGS.md  add_valuation_performance_menu.py  align_kobdb_to_uat.py  apply_product_defaults.py  apply_real_uat_names.sql  audit_rbac.py  auto-commit.sh  backfill_count_task_ref.py  backfill_demand.py  backfill_estimates.py  backfill_wms_sales_order.sql  build_wms_dashboards.py  bulk_enable_settings.py  bust_assets.py  bust_assets2.py  cleanup_negative_quants.py  cleanup_service_product_stock.py  complete_bom_operations.py  dedupe_accounts.sql  distribute_quants_random.py  enable_multi_location_view.py  enforce_first_submenu_landing.py  enforce_pickface_only.py  fix_cc_00003_use_specific_bin.py  fix_inventory_include_sublocations.py  fix_locations_fefo.py  fix_master_data_to_uat.py  fix_quant_fragmentation.py  fix_uat_bank_journals.py  fix_valuation_sort.py  force_lots_everywhere.py  generate_app_icons.py  generate_sample_import.py  import_uat_subcontract_boms.py  kob-aws.sh  kob_employee_credentials.csv  migrate_user_emails.py  odoo.conf  polish_journal_names.py  preview_auto_batch.py  (+57 more)
tests/: conftest.py  test_accounting_advanced.py  test_events.py  test_group.py  test_group_extra.py  test_group_module.py  test_health.py  test_hr_advanced.py  test_inventory_advanced.py  test_mfg_advanced.py  test_outbound_workflow.py  test_phase2c.py  test_phase2d_plus.py  (+6 more)
(+1228 files in other folders)
